--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -25,7 +25,7 @@
 
 <p>2 Hours</p>
 
-<hr />
+<hr>
 
 <h2>Learning Objectives</h2>
 
@@ -38,7 +38,7 @@
 <li>Render a provided reproducible report to multiple outputs using Rstudio, <code>Rmarkdown</code>, and the <code>knitr</code> package</li>
 </ul>
 
-<hr />
+<hr>
 
 <h2>Introductions</h2>
 
@@ -54,7 +54,7 @@
 
 <p>Automation or transformation: has the research paper changed much in the last 350 years (or why static PDFs are an underwhelming use of today&rsquo;s technology)</p>
 
-<p><img src="img/RSjournal.jpeg" alt="Maxwell's discovery of the electromagnetic properties of light" /></p>
+<p><img src="img/RSjournal.jpeg" alt="Maxwell&rsquo;s discovery of the electromagnetic properties of light" /></p>
 
 <p>Original manuscript of James Clerk Maxwell&rsquo;s paper on &lsquo;A dynamical theory of the electromagnetic field&rsquo; published in the oldest scientific journal, <em>Philosophical Transactions</em>, in 1685. According to the publisher, the Royal Society:</p>
 
@@ -75,6 +75,17 @@
 
 <p>Source: Rallison, S.P., &lsquo;What are Journals For?&rsquo;, <em>Ann R Coll Surg Engl.</em> 2015 Mar; 97(2): 89-91. DOI: 10.1308/003588414X14055925061397</p>
 
+<h2>How did the idea of reproducible reports develop?</h2>
+
+<p>The intial development of a reproducible report that included text and code
+was the concept of Literate Programming developed by Donaly Knuth.<br>
+This work was the start of the LaTeX environment and other tools for building
+interactive documents (Knuth, D. (1992). Literate Programming. Center for the Study of Language and
+Information, Stanford, California).  Modern research compendium in R were first
+described by Gentelman and Lang in (<a href="https://biostats.bepress.com/bioconductor/paper2/">Statistical Analyses and Reproducible
+Research</a>) (May 2004).
+Bioconductor Project Working Papers. Working Paper 2.</p>
+
 <h2>What are some examples of reproducible reports?</h2>
 
 <ol>
@@ -91,7 +102,7 @@ elevated c-Myc <em>eLife</em> 2018; 7:e30274 DOI
 
 <p><a href="https://zenodo.org/communities/research-compendium/">Zenodo collection</a></p>
 
-<p><a href="https://research-compendium.science/">Research compendium setup</a></p>
+<p><a href="https://research-compendium.science/">Research compendium resources</a></p>
 
 <h2>How can authors fulfill these requirements while making their research reports more Findable, Accessible, Interoperable, and Re-Useable/Reproducible?</h2>
 
