--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -25,7 +25,7 @@
 
 <p>3 hours</p>
 
-<hr />
+<hr>
 
 <p>In a reproducible report, elements in the Rmarkdown file affect not only how your documents look, but also how they render and behave when output to a final format. That is because the coded text and scripts within the Rmarkdown file are <strong>computationally actionable</strong>. A computer is operating on the document to combine and render its content, providing you more power than you would have working manually as a human author.</p>
 
@@ -41,15 +41,17 @@
 <li>Demonstrate the power of integrating content from the Web into your reproducible report</li>
 </ul>
 
-<hr />
+<hr>
 
 <h2>Content generated from R scripts</h2>
 
 <p>Up to now, you have manually entered three dates referenced in this document. Let&rsquo;s replace them with dynamically generated dates that will auto-update by the computer!</p>
 
 <ol>
-<li>Open the file <code>insert_dates.R</code><br /></li>
-<li>Copy the code into the 3 different sections of the exercise file, as directed in the comments included in <code>insert_dates.R</code><br /></li>
+<li>Open the file <code>insert_dates.R</code><br>
+</li>
+<li>Copy the code into the 3 different sections of the exercise file, as directed in the comments included in <code>insert_dates.R</code><br>
+</li>
 <li>Close the file <code>insert_dates.R</code></li>
 </ol>
 
@@ -101,7 +103,7 @@
 
 <p>What difference do you see in how <code>code folding</code> renders in the HTML and Word outputs? You can ponder this question as you enjoy a morning break!</p>
 
-<hr />
+<hr>
 
 <h2>Building in User Interaction (Part 2)</h2>
 
@@ -167,7 +169,7 @@ file and paste the code into the plot code chunk titled <code>plot_license</code
 
 <p>If there is time, you can adapt this parameter code to the other plot in the report.</p>
 
-<hr />
+<hr>
 
 <h2>[1] Xie et al was published online in July 2018 at <a href="https://bookdown.org/yihui/rmarkdown/">https://bookdown.org/yihui/rmarkdown/</a></h2>
 
