--- a/01-getting-started.html
+++ b/01-getting-started.html
@@ -83,8 +83,8 @@ This work was the start of the LaTeX environment and other tools for building
 interactive documents (Knuth, D. (1992). Literate Programming. Center for the Study of Language and
 Information, Stanford, California).  Modern research compendium in R were first
 described by Gentelman and Lang in (<a href="https://biostats.bepress.com/bioconductor/paper2/">Statistical Analyses and Reproducible
-Research</a>) (May 2004).
-Bioconductor Project Working Papers. Working Paper 2.</p>
+Research</a> (May 2004).
+Bioconductor Project Working Papers. Working Paper 2.).</p>
 
 <h2>What are some examples of reproducible reports?</h2>
 
