--- a/02-markdown.html
+++ b/02-markdown.html
@@ -73,7 +73,7 @@ HTML, Word, or another output format. We will ignore the code chunks until a
 bit later in the week, when we take on dynamic reporting elements.</li>
 </ul>
 
-<h2>How R Knits Documents</h2>
+<h2>How RStudio Knits Documents</h2>
 
 <p>RStudio relies on a stack of technologies that work together to make plain text
 authoring simple, reliable, enjoyable, and powerful. This conceptual stack is
