--- a/02-markdown.html
+++ b/02-markdown.html
@@ -177,7 +177,7 @@ meaning. For example,</p>
 
 <li><p>Add emphasis to the text, where appropriate, using single or double asterisks or single or double underscores. either type of character works, as long as it is matched on both sides of the emphasized phrase. You may find text phrases in want of emphasis include the phrase &ldquo;Not Applicable&rdquo;; the title of the Project; and titles of publications.</p></li>
 
-<li><p>Superscripts and subscripts can be added by surrounding the text with the symbols \^ and ~ , respectively. Find one phrase in the &lsquo;Project Description&rsquo; section in want of a superscript and another, a subscript. Mark these occurrences up accordingly.</p></li>
+<li><p>Superscripts and subscripts can be added by surrounding the text with the symbols ^ and ~ , respectively. Find one phrase in the &lsquo;Project Description&rsquo; section in want of a superscript and another, a subscript. Mark these occurrences up accordingly.</p></li>
 
 <li><p>Find two quoted text blocks and insert the &gt; symbol at the beginning of each to markup these passages as blockquotes (maybe you remember this from old e-mail programs?)</p></li>
 </ol>
