--- a/03-dynamic.html
+++ b/03-dynamic.html
@@ -67,20 +67,24 @@
 
 <h2>Auto-generate bibliography files</h2>
 
-<p>Have you wondered why the YAML in the exercise file contains two separate bibliography files (<code>oajournals.bib</code> and <code>packages.bib</code>)? Why not make one concatenated file?</p>
+<p>It&rsquo;s good practice to cite the software you use during your research project. <code>R</code> packages are continually
+updated in the <a href="https://cran.r-project.org/">The Comprehensive R Archive Network, CRAN</a>. If we manually maintained
+the bibliography file we&rsquo;d be editing it continually to reflect the new version of any <code>R</code> package we use.</p>
 
-<p>The reason for the two files is that some of the references cited in our reproducible report represent <code>R</code> packages used to generate the report. <code>R</code> packages are continually updated in the <a href="https://cran.r-project.org/">The Comprehensive R Archive Network, CRAN</a>. If we manually maintained the bibliography file we&rsquo;d be editing it continually to reflect the new version of any <code>R</code> package we use.</p>
-
-<p>Alternatively, we can use the <code>write_bib.R</code> function in <code>knitr</code> to dynamically generate a <code>packages.bib</code> file for all the R packages referenced in the report. This more powerful and efficient form of literate programming provides certainty that the references are always up-to-date!</p>
+<p>Alternatively, we can use the <code>write_bib.R</code> function in <code>knitr</code> to dynamically
+generate a <code>packages.bib</code> file for all the R packages we want to reference in the report. This more powerful
+and efficient form of literate programming provides certainty that the references are always up-to-date!</p>
 
 <p>In this exercise, let&rsquo;s add the citation for the <code>DT</code> and the  <code>rorcid</code> packages that we&rsquo;ll be using later on in this lesson.</p>
 
 <ol>
-<li>Open <code>packages.bib</code> file to see that it currently does not include a citation for <code>DT</code> or <code>rorcid</code>. Close that file.</li>
+<li>Delete to <code>packages.bib</code> file that was included in the file download</li>
 <li>Open the script file <code>write_bib.R</code> and on the third line &ndash; the one that starts with <code>write_bib(c(&quot;tidyverse&quot;...)</code> add <code>DT</code> and <code>rorcid</code>, each in quotes, to the list of packages you want references for.</li>
 <li>Save the changes to <code>write_bib.R</code></li>
 <li>Select all of the code in  <code>write_bib.R</code> with your mouse. Once it is all highlighted, press <code>command+enter</code> to execute the code. You can watch the code run in your console window.</li>
-<li>Open <code>packages.bib</code> file once again to see that it now includes a citation for the <code>DT</code> and <code>rorcid</code> packages we&rsquo;ll be using in a bit. Close that file and put a smiley sticky on your laptop to signify happiness.</li>
+<li>Open <code>packages.bib</code> file once again to see that it now includes a citation for the <code>DT</code> and <code>rorcid</code> packages we&rsquo;ll be using in a bit.</li>
+<li>Add <code>packages.bib</code> to your YAML header and add software references to your
+report.</li>
 </ol>
 
 <h2>Building in User Interaction (Part 1)</h2>
@@ -149,17 +153,22 @@
 <ol>
 <li><p>Open the file <code>insert_params.txt</code> and copy all of the code. Close the file.</p></li>
 
-<li><p>In the YAML header of the exercise file ( at the bottom, before the three ending dashes), paste in the copied code <code>r params$institution</code>. If you wish to change the names of any of the Institutions listed, feel free to do so. Just make sure there are at least four Institutions included in the list. Save the changes.</p></li>
+<li><p>In the YAML header of the exercise file ( at the bottom, before the three ending dashes), paste in the copied code.
+If you wish to change the names of any of the Institutions listed, feel free to do so. Just make sure there are at least four Institutions included in the list. Save the changes.</p></li>
 
 <li><p>In the the body text of the exercise file, find five occurrences of an Institution name. To find the occurrences in the main body of the text, use the &lsquo;Find&rsquo; option under RStudio&rsquo;s Edit menu. Replace each occurrence of an Institution name with the code <code>r params$institution</code>.  When you <code>knit with parameters</code>, the inline R code will automatically write in the name of your selected Institution.</p></li>
+
+<li><p>In the YAML header edit the author so that it&rsquo;s not a string, and add <code>r
+params$institution</code> in the spot where the affiliation would go</p></li>
 
 <li><p>Knit to HTML and find six occurrences of your auto-populated Institution name.</p></li>
 </ol>
 
-<p>Paramters can do more than control text. Let&rsquo;s use a paramter to make changes to a graph</p>
+<p>Paramters can do more than control text. Let&rsquo;s use a parameter to make changes to a graph</p>
 
 <ol>
-<li><p>Open the file <code>insert_params2.txt</code> and copy all of the code. Close the file and paste the code into the YAML header</p></li>
+<li><p>Open the file <code>insert_params2.txt</code> and copy all of the code. Close the file
+and paste the code into the parameters section of the YAML header.</p></li>
 
 <li><p>Open the file <code>insert_plot2_params.txt</code> and copy all the code. Close the
 file and paste the code into the plot code chunk titled <code>plot_license</code></p></li>
