--- a/02-markdown.html
+++ b/02-markdown.html
@@ -25,7 +25,7 @@
 
 <p>3 hours</p>
 
-<hr>
+<hr />
 
 <h2>Learning Objectives</h2>
 
@@ -42,7 +42,7 @@
 <li>Include equations in your document</li>
 </ul>
 
-<hr>
+<hr />
 
 <h2>Anatomy of an R Markdown Reproducible Report</h2>
 
@@ -112,8 +112,7 @@ you can use Pandoc&rsquo;s Markdown to create the following elements in an RMark
 <h4>Recommended resources on RMarkdown</h4>
 
 <ul>
-<li>RStudio, <em>RMarkdown Homepage</em>, <a href="https://rmarkdown.rstudio.com/">https://rmarkdown.rstudio.com/</a><br>
-</li>
+<li>RStudio, <em>RMarkdown Homepage</em>, <a href="https://rmarkdown.rstudio.com/">https://rmarkdown.rstudio.com/</a><br /></li>
 <li>RStudio <em>RMarkdown Formats</em>, <a href="https://rmarkdown.rstudio.com/formats.html">https://rmarkdown.rstudio.com/formats.html</a></li>
 <li>Yihui Xie, J. J. Allaire, and Garrett Grolemund, 2018.  <em>R Markdown: The Definitive Guide</em>, <a href="https://bookdown.org/yihui/rmarkdown/">https://bookdown.org/yihui/rmarkdown/</a></li>
 </ul>
@@ -126,8 +125,7 @@ Rmarkdown document. It then creates a new markdown (<code>.md</code>) document w
 <h4>Recommended resources on Knitr</h4>
 
 <ul>
-<li>Yihui Xie, <em>knitr: elegant, flexible, and fast dynamic report generation with R</em>, <a href="https://yihui.name/knitr/">https://yihui.name/knitr/</a><br>
-</li>
+<li>Yihui Xie, <em>knitr: elegant, flexible, and fast dynamic report generation with R</em>, <a href="https://yihui.name/knitr/">https://yihui.name/knitr/</a><br /></li>
 <li>Yihui Xie, <em>Dynamic Documents with R and knitr</em>, Second Edition (Chapman &amp; Hall/CRC The R Series) 2nd Edition, also online at: <a href="https://github.com/yihui/knitr-book">https://github.com/yihui/knitr-book</a></li>
 </ul>
 
@@ -225,7 +223,7 @@ and Word. Compare the results to see if anything changes based on output file
 format.</p></li>
 </ol>
 
-<hr>
+<hr />
 
 <h2>Document Sections</h2>
 
