--- a/04-publishing.html
+++ b/04-publishing.html
@@ -143,26 +143,33 @@ on your computer&rsquo;s operating system and configuration.</p>
 
 <ol>
 <li>In the exercise file, under the <strong>Project PI&rsquo;s Biosketch</strong> section, we
-need to make a couple of updates:</li>
+need to make a couple of updates:
+a. Add the following text under the header to give attribution to the
+<code>rorcid</code> package:</li>
 </ol>
-
-<p>a. Add the following text under the header to give attribution to the <code>rorcid</code> package.</p>
 
 <p><code>_This is auto-populated from your ORCID profile using the @R-rorcid package._</code></p>
 
-<p>b. Insert code to place the ORCID bio into the PI Biosketch section. Below
-the code chunk, add <code>\</code>r bio` `</p>
+<pre><code>b. Insert code to place the ORCID bio into the PI Biosketch section. Below
+the code chunk, add ``r bio``.
+</code></pre>
 
 <ol>
-<li><p>Save the changes, knit to HTML, and you&rsquo;ll see the biography from your ORCID file now appear in the reproducible report.</p></li>
+<li><p>Save the changes, knit to HTML, and you&rsquo;ll see the biography from your
+ORCID file now appear in the reproducible report.</p></li>
 
-<li><p>To test that the biosketch will be auto-updated in your  report when your ORCID bio is updated, go to your ORCID account and make a change to your biography. You might add a new accomplishment to the top of the bio, such as <em>Master of Reproducible Reporting</em> or <em>Bends RMarkdown to Thier Will</em>.</p></li>
+<li><p>To test that the biosketch will be auto-updated in your report when your
+ORCID bio is updated, go to your ORCID account and make a change to your
+biography. You might add a new accomplishment to the top of the bio, such
+as <em>Master of Reproducible Reporting</em> or <em>Bends RMarkdown to Their Will</em>.</p></li>
 </ol>
 
-<p>When you knit the document to HTML, the <strong>Principal Investigators Biosketch</strong> auto-updates!</p>
+<p>When you knit the document to HTML, the <strong>Principal Investigators Biosketch</strong>
+auto-updates!</p>
 
 <ol>
-<li>Back in your ORCID profile, don&rsquo;t forget to remove the latest change to your bio, if appropriate.</li>
+<li>Back in your ORCID profile, don&rsquo;t forget to remove the latest change to
+your bio, if appropriate.</li>
 </ol>
 
 <h2>Wrapup</h2>
