--- a/04-publishing.html
+++ b/04-publishing.html
@@ -143,16 +143,16 @@ on your computer&rsquo;s operating system and configuration.</p>
 
 <ol>
 <li>In the exercise file, under the <strong>Project PI&rsquo;s Biosketch</strong> section, we
-need to make a couple of updates:
-a. Add the following text under the header to give attribution to the
-<code>rorcid</code> package:</li>
+need to make a couple of updates:</li>
 </ol>
+
+<p>a. Add the following text under the header to give attribution to the
+    <code>rorcid</code> package:</p>
 
 <p><code>_This is auto-populated from your ORCID profile using the @R-rorcid package._</code></p>
 
-<pre><code>b. Insert code to place the ORCID bio into the PI Biosketch section. Below
-the code chunk, add ``r bio``.
-</code></pre>
+<p>b. Insert code to place the ORCID bio into the PI Biosketch section. Below
+    the code chunk, add <code>r bio</code>.</p>
 
 <ol>
 <li><p>Save the changes, knit to HTML, and you&rsquo;ll see the biography from your
