--- a/04-publishing.html
+++ b/04-publishing.html
@@ -152,7 +152,7 @@ need to make a couple of updates:</li>
 <p><code>_This is auto-populated from your ORCID profile using the @R-rorcid package._</code></p>
 
 <p>b. Insert code to place the ORCID bio into the PI Biosketch section. Below
-    the code chunk, add <code>r bio</code>.</p>
+    the code chunk, add <code>`r bio`</code>.</p>
 
 <ol>
 <li><p>Save the changes, knit to HTML, and you&rsquo;ll see the biography from your
@@ -161,7 +161,7 @@ ORCID file now appear in the reproducible report.</p></li>
 <li><p>To test that the biosketch will be auto-updated in your report when your
 ORCID bio is updated, go to your ORCID account and make a change to your
 biography. You might add a new accomplishment to the top of the bio, such
-as <em>Master of Reproducible Reporting</em> or <em>Bends RMarkdown to Their Will</em>.</p></li>
+as <em>Master of Reproducible Reporting</em> or <em>Bends R Markdown to Their Will</em>.</p></li>
 </ol>
 
 <p>When you knit the document to HTML, the <strong>Principal Investigators Biosketch</strong>
